--- a/web/typescript/01.基础学习/11.声明合并.md
+++ b/web/typescript/01.基础学习/11.声明合并.md
@@ -218,3 +218,25 @@ import "./map";
 let o: Observable<number>;
 o.map(x => x.toFixed());
 ```
+
+模块名的解析和用 import / export 解析模块标识符的方式是一致的。当这些声明在扩展中合并时，就好像在原始位置被声明了一样。但是，你不能在扩展中声明新的顶级声明 - 仅可以扩展模块中已经存在的声明。
+
+**全局扩展**
+
+全局扩展与模块扩展的行为和限制是相同的。
+```TS
+// observable.ts
+export class Observable<T> {
+  // ... still no implementation ...
+}
+
+declare global {
+  interface Array<T> {
+    toObservable(): Observable<T>;
+  }
+}
+
+Array.prototype.toObservable = function () {
+  // ...
+}
+```
