react-transition-group

--- a/web/react/基础/渲染原理.md
+++ b/web/react/基础/渲染原理.md
@@ -49,7 +49,7 @@ console.log('app:', app);
 ReactDOM.render(app, document.getElementById('root'));
 ```
 以上代码生成的虚拟dom树：
-![](./11.虚拟dom树.png)
+![](./渲染原理-虚拟dom树.png)
 
 ### 三、更新节点
 
