--- a/web/react/Redux/核心.md
+++ b/web/react/Redux/核心.md
@@ -45,19 +45,19 @@ store.dispatch(action);
 console.log('getState:', store.getState());
 ```
 
-##### 1).store.getState()
+##### 1)*store.getState()
 
 获取当前的状态值。
 
-##### 2).store.dispatch()
+##### 2)*store.dispatch()
 
 触发 action
 
-##### 3).store.replaceReducer()
+##### 3)store.replaceReducer()
 
 用一个新的reducer替换掉当前的reducer
 
-##### 4).store.subscribe()
+##### 4)*store.subscribe()
 
 注册一个监听器，监听器是一个无参函数，该分发一个action之后，会运行注册的监听器。
 
