--- a/web/react/基础/03.HOOK/02.State.md
+++ b/web/react/基础/03.HOOK/02.State.md
@@ -59,5 +59,5 @@ var [n, setN] = useState(0);
 8. 和类组件的状态一样，函数组件中改变状态可能是异步的（在 DOM 事件中），多个状态变化会合并以提高效率，此时不能信任之前的状态，而应该使用回调函数改变状态。
 
 ```JS
-useState(pre => pre + 1);
+setState(pre => pre + 1);
 ```
