--- a/web/react/基础/03.HOOK/03.Effect.md
+++ b/web/react/基础/03.HOOK/03.Effect.md
@@ -21,7 +21,8 @@ Effect HOOK：用于在函数组件中处理副作用
 2. 每个函数组件中，可以多次使用 useEffect ，但不要放入判断或循环等代码块中。
 3. useEffect 中的副作用函数可以有返回值，返回值必须是一个函数。该函数叫做清理函数。
     1. 运行时间点为每次运行副作用函数之前。
-    2. 首次渲染组件不会运行
+    2. 组件销毁之时。
+    3. 首次渲染组件不会运行
 4. useEffect 函数，可以传递第二个参数
     1. 第二个参数是一个数组
     2. 数组中记录该副作用的依赖数据
