--- a/web/react/基础/03.HOOK/10.ImperativeHandle.md
+++ b/web/react/基础/03.HOOK/10.ImperativeHandle.md
@@ -3,7 +3,10 @@
 
 函数：useImperativeHandle
 
+useImperativeHandle 可以让你在使用 ref 时自定义暴露给父组件的实例值。在大多数情况下，应当避免使用 ref 这样的命令式代码。
+
 如果不给依赖项，每次运行函数组件都会执行
+
 如果使用了依赖项，则第一次调用后，会进行缓存，只有依赖项发生变化时才会重新调用。
 
 ```JS
@@ -11,7 +14,7 @@ function Test(props, ref) {
   useImperativeHandle(
     ref,
     () => {
-      // 相当于给 ref.current 赋值了 1
+      // 相当于给 ref.current 赋值了
       console.log(123);
       return {
         method: () => {
