--- a/web/javascript/03.基础学习/基础.md
+++ b/web/javascript/03.基础学习/基础.md
@@ -230,3 +230,30 @@ let、const：
 const:
 * const定义只是变量指向的那个内存地址不得改动
 * 必须有初始值。
+
+### 十三、document.designMode
+
+// 与前端的JavaScript有关，设计模式让你可以编辑页面上的任何内容。只要打开浏览器控制台，输入以下内容即可。
+```JS
+document.designMode = 'on';
+```
+
+### 十四、解构赋值
+
+```JS
+const person = { id: 1, name: '前端小智' };
+const { name: personName } = person;
+console.log(personName); // '前端小智'
+```
+```JS
+// 动态键来解构属性
+const templates = {
+  'hello': 'Hello there',
+  'bye': 'Good bye'
+};
+const templateName = 'bye';
+
+const { [templateName]: template } = templates;
+
+console.log(template); // Good bye
+```
