--- a/web/vue2/vue详解/01.虚拟dom.md
+++ b/web/vue2/vue详解/01.虚拟dom.md
@@ -6,17 +6,52 @@
 
 #### 1.什么是虚拟dom？
 
-虚拟dom本质上就是一个普通的js对象，用于描述视图的界面结构，在vue中，每个对象都有一个render函数，每个render函数都会返回一个虚拟dom树，这也就意味着每个组件都对应一棵虚拟dom树。
+虚拟 DOM （Virtual DOM ）就是一个普通的 JavaScript 对象，包含了 tag、props、children 三个属性，以这三个属性来描述一个DOM节点，每组描述就是一个VNode，整个VNode的集合就是一个虚拟DOM树。
+
+举个例子：
+```HTML
+<div id="app">
+  <p class="text">hello world!!!</p>
+</div>
+```
+将上面的HTML模版抽象成虚拟DOM树：
+```JS
+{
+  tag: 'div',
+  props: {
+    id: 'app'
+  },
+  chidren: [
+    {
+      tag: 'p',
+      props: {
+        className: 'text'
+      },
+      chidren: [
+        'hello world!!!'
+      ]
+    }
+  ]
+}
+```
+
+
+在vue中，每个对象都有一个render函数，每个render函数都会返回一个虚拟dom树，这也就意味着每个组件都对应一棵虚拟dom树。
 
 > vue2.0: render > template > el
-
 > vue3.0: setup > render > template > el
 
 #### 2.为什么需要虚拟dom？
 
-在vue中，渲染视图会调用render函数，这种渲染不仅发生在组件创建时，同时发生在视图依赖的数据更新时。如果在渲染时，直接使用真实dom，由于真实的dom的创建、更新、插入等操作会带来大量的性能损耗，从而就会极大的降低渲染效率。
+1. 具有跨平台的优势
 
-因此，vue在渲染时，使用虚拟dom来代替真实dom，主要为解决渲染效率的问题。
+由于虚拟DOM 是以 JavaScript 对象为基础而不依赖真实平台环境，所以使它具有了跨平台的能力，比如说浏览器平台、Weex、Node 等，是实现ssr、小程序等的基础。
+
+2. 提升渲染能力
+
+因为DOM是一个很大的对象，直接操作DOM，即便是一个空的 div 也要付出昂贵的代价，执行速度远不如我们抽象出来的 Javascript 对象的速度快，因此，把大量的DOM操作搬运到 Javascript 中，运用diff算法来计算出真正需要更新的节点，最大限度地减少DOM操作，从而显著提高性能。虚拟DOM的优势不在于单次的操作，而是在大量、频繁的数据更新下，能够对视图进行合理、高效的更新。
+
+> 在vue中，渲染视图会调用render函数，这种渲染不仅发生在组件创建时，同时发生在视图依赖的数据更新时。如果在渲染时，直接使用真实dom，由于真实的dom的创建、更新、插入等操作会带来大量的性能损耗，从而就会极大的降低渲染效率。因此，vue在渲染时，使用虚拟dom来代替真实dom，主要为解决渲染效率的问题。
 
 #### 3.虚拟dom是如何转换为真实dom的？
 
@@ -28,10 +63,10 @@
 
 #### 4.模板和虚拟dom的关系？
 
-vue框架中有一个compile模块，它主要负责将模板转换为render函数，而render函数调用后将得到虚拟dom。
+vue框架中有一个 compile 模块，它主要负责将模板转换为render函数，而render函数调用后将得到虚拟dom。
 
 编译过程分两步：
-1）将模板字符串转换为AST
+1）将模板字符串转换为AST（抽象语法树）
 2）将AST转换为render函数
 
 如果使用传统的引用方式，则编译时间发生在组件第一次加载时，这称之为运行时编译。
