--- a/web/vue2/vue详解/03.diff算法.md
+++ b/web/vue2/vue详解/03.diff算法.md
@@ -74,3 +74,154 @@ patch函数首先对根节点进行比较：
 * 不行的话，尽量仅改动元素属性
 * 还不行的话，尽量转移元素，而不是删除和创建元素
 * 还不行的话，删除和创建元素
+
+
+#### 4.patch算法核心
+
+```JS
+function patch (oldVnode, vnode) {
+  // some code
+  if (sameVnode(oldVnode, vnode)) {
+    patchVnode(oldVnode, vnode)
+  } else {
+    const oEl = oldVnode.el // 当前oldVnode对应的真实元素节点
+    let parentEle = api.parentNode(oEl)  // 父元素
+    createEle(vnode)  // 根据Vnode生成新元素
+    if (parentEle !== null) {
+      api.insertBefore(parentEle, vnode.el, api.nextSibling(oEl)) // 将新元素添加进父元素
+      api.removeChild(parentEle, oldVnode.el)  // 移除以前的旧元素节点
+      oldVnode = null
+    }
+  }
+  // some code
+  return vnode
+}
+```
+
+```JS
+// 用于比对是否是同一VNode
+function sameVnode (a, b) {
+  return (
+    a.key === b.key && ( // key值
+      (
+        a.tag === b.tag && // 标签名
+        a.isComment === b.isComment && // 是否为注释节点
+        // 是否都定义了data，data包含一些具体信息，例如onclick , style
+        isDef(a.data) === isDef(b.data) &&
+        sameInputType(a, b) // 当标签是<input>的时候，type必须相同
+      ) || (
+        isTrue(a.isAsyncPlaceholder) &&
+        a.asyncFactory === b.asyncFactory &&
+        isUndef(b.asyncFactory.error)
+      )
+    )
+  )
+}
+```
+
+patch函数接收两个参数oldVnode和Vnode分别代表新的节点和之前的旧节点，判断两节点是否值得比较，值得比较则执行patchVnode，不值得比较则用Vnode替换oldVnode
+
+**patchVnode过程**
+```JS
+patchVnode (oldVnode, vnode) {
+  const el = vnode.el = oldVnode.el
+  let i, oldCh = oldVnode.children, ch = vnode.children
+  if (oldVnode === vnode) return
+  if (oldVnode.text !== null && vnode.text !== null && oldVnode.text !== vnode.text) {
+    api.setTextContent(el, vnode.text)
+  }else {
+    updateEle(el, vnode, oldVnode)
+    if (oldCh && ch && oldCh !== ch) {
+      updateChildren(el, oldCh, ch)
+    }else if (ch){
+      createEle(vnode) //create el's children dom
+    }else if (oldCh){
+      api.removeChildren(el)
+    }
+  }
+}
+```
+* 找到对应的真实dom，称为el 
+* 判断Vnode和oldVnode是否指向同一个对象，如果是，那么直接return 
+* 如果他们都有文本节点并且不相等，那么将Vnode的文本节点设置为el的文本节点。 
+* 如果oldVnode有子节点而Vnode没有，则删除el的子节点 
+* 如果oldVnode没有子节点而Vnode有，则将Vnode的子节点真实化之后添加到el 
+* 如果两者都有子节点，则执行updateChildren函数比较子节点
+
+**updateChildren过程**
+这一部分可以说是 diff 算法中，变动最多的部分，因为前面的部分，各个库对比的方向基本一致，而关于子节点的对比，各个仓库都在前者基础上不断得进行改进，此处以Vue源码的 updateChildren 为例。
+```JS
+updateChildren (parentElm, oldCh, newCh) {
+    let oldStartIdx = 0, newStartIdx = 0
+    let oldEndIdx = oldCh.length - 1
+    let oldStartVnode = oldCh[0]
+    let oldEndVnode = oldCh[oldEndIdx]
+    let newEndIdx = newCh.length - 1
+    let newStartVnode = newCh[0]
+    let newEndVnode = newCh[newEndIdx]
+    let oldKeyToIdx
+    let idxInOld
+    let elmToMove
+    let before
+    while (oldStartIdx <= oldEndIdx && newStartIdx <= newEndIdx) {
+        if (oldStartVnode == null) {   // 对于vnode.key的比较，会把oldVnode = null
+            oldStartVnode = oldCh[++oldStartIdx] 
+        }else if (oldEndVnode == null) {
+            oldEndVnode = oldCh[--oldEndIdx]
+        }else if (newStartVnode == null) {
+            newStartVnode = newCh[++newStartIdx]
+        }else if (newEndVnode == null) {
+            newEndVnode = newCh[--newEndIdx]
+        }else if (sameVnode(oldStartVnode, newStartVnode)) {
+            patchVnode(oldStartVnode, newStartVnode)
+            oldStartVnode = oldCh[++oldStartIdx]
+            newStartVnode = newCh[++newStartIdx]
+        }else if (sameVnode(oldEndVnode, newEndVnode)) {
+            patchVnode(oldEndVnode, newEndVnode)
+            oldEndVnode = oldCh[--oldEndIdx]
+            newEndVnode = newCh[--newEndIdx]
+        }else if (sameVnode(oldStartVnode, newEndVnode)) {
+            patchVnode(oldStartVnode, newEndVnode)
+            api.insertBefore(parentElm, oldStartVnode.el, api.nextSibling(oldEndVnode.el))
+            oldStartVnode = oldCh[++oldStartIdx]
+            newEndVnode = newCh[--newEndIdx]
+        }else if (sameVnode(oldEndVnode, newStartVnode)) {
+            patchVnode(oldEndVnode, newStartVnode)
+            api.insertBefore(parentElm, oldEndVnode.el, oldStartVnode.el)
+            oldEndVnode = oldCh[--oldEndIdx]
+            newStartVnode = newCh[++newStartIdx]
+        }else {
+           // 使用key时的比较
+            if (oldKeyToIdx === undefined) {
+                oldKeyToIdx = createKeyToOldIdx(oldCh, oldStartIdx, oldEndIdx) // 有key生成index表
+            }
+            idxInOld = oldKeyToIdx[newStartVnode.key]
+            if (!idxInOld) {
+                api.insertBefore(parentElm, createEle(newStartVnode).el, oldStartVnode.el)
+                newStartVnode = newCh[++newStartIdx]
+            }
+            else {
+                elmToMove = oldCh[idxInOld]
+                if (elmToMove.sel !== newStartVnode.sel) {
+                    api.insertBefore(parentElm, createEle(newStartVnode).el, oldStartVnode.el)
+                }else {
+                    patchVnode(elmToMove, newStartVnode)
+                    oldCh[idxInOld] = null
+                    api.insertBefore(parentElm, elmToMove.el, oldStartVnode.el)
+                }
+                newStartVnode = newCh[++newStartIdx]
+            }
+        }
+    }
+    if (oldStartIdx > oldEndIdx) {
+        before = newCh[newEndIdx + 1] == null ? null : newCh[newEndIdx + 1].el
+        addVnodes(parentElm, before, newCh, newStartIdx, newEndIdx)
+    }else if (newStartIdx > newEndIdx) {
+        removeVnodes(parentElm, oldCh, oldStartIdx, oldEndIdx)
+    }
+}
+```
+
+**图解updateChildren：**
+
+https://zhuanlan.zhihu.com/p/407493321
