--- a/web/typescript/01.基础学习/01.基础类型.md
+++ b/web/typescript/01.基础学习/01.基础类型.md
@@ -19,6 +19,23 @@ let strLength: number = (someValue as string).length;
 
 两种形式是等价的，但是在TS里使用JSX时，只有as语法断言是被允许的。
 
+**实例：**
+```TS
+const foo = {};
+foo.bar = 123; // Error: 'bar' 属性不存在于 ‘{}’
+foo.bas = 'hello'; // Error: 'bas' 属性不存在于 '{}'
+// 这里的代码发出了错误警告，因为 foo 的类型推断为 {}，即没有属性的对象。因此，你不能在它的属性上添加 bar 或 bas，你可以通过类型断言来避免此问题
+interface Foo {
+  bar: number;
+  bas: string;
+}
+ 
+const foo = {} as Foo;
+foo.bar = 123;
+foo.bas = 'hello';
+// 这也会存在一个同样的问题，如果你忘记了某个属性，编译器同样也不会发出错误警告
+```
+
 ### 一、布尔值 boolean
 
 ```TS
@@ -72,6 +89,11 @@ let list: number[] = [1, 2, 3];
 // 使用数组泛型，Array<元素类型>：
 let list: Array<number> = [1, 2, 3];
 ```
+```TS
+// 只读
+let list: ReadonlyArray<number> = [1, 2, 3];
+```
+
 
 ### 七、元组 Tuple
 
@@ -123,6 +145,19 @@ enum Color {Red = 1, Green, Blue}
 let colorName: string = Color[2];
 console.log(colorName);  // 显示'Green'因为上面代码里它的值是2
 ```
+const enum 编译之后不会保留Color对象
+```TS
+const enum Color {
+  Red = 3,
+  Green,
+  Blue,
+}
+
+let c: Color = Color.Green;
+
+// 编译之后
+var c = 4 /* Green */;
+```
 
 ### 九、Any
 
@@ -160,6 +195,7 @@ function warnUser(): void {
 ```
 
 声明一个void类型的变量没有什么大用，因为你只能为它赋予undefined和null：
+> 当指定了--strictNullChecks标记，允许赋值为undefined，但是不允许赋值为null。
 ```TS
 let unusable: void = undefined;
 ```
@@ -186,6 +222,30 @@ function infiniteLoop(): never {
   while (true) {
   }
 }
+
+// never 是任何类型的子类型，也就是说 never 可以赋值给任何类型
+const a: number = '' as never;
+const b: object = '' as never;
+```
+
+实例： 对于一个接口，如何定义某个属性为number，其它不确定的属性都为string
+```TS
+// 这样写是会报错的
+interface IType {
+	age: number;
+	[key: string]: string;
+}
+// 在 ITypeKeyAny 类型中的 age 类型设置为 never 后，不会和下面的 string 类型冲突，因为 never 类型是任何类型的子类型。在和 ITypeAge 类型联合时也不会冲突，并且 age 类型扩张为 number 类型。
+interface ITypeAge {
+  age: number;
+}  
+
+interface ITypeKeyAny {
+  age: never;
+  [key: string]: string;
+}
+
+type Itype = ITypeAge | ITypeKeyAny;
 ```
 
 ### 十二、Object
