--- a/web/typescript/01.基础学习/02.接口.md
+++ b/web/typescript/01.基础学习/02.接口.md
@@ -29,6 +29,8 @@ let myObj = {size: 10, label: "Size 10 Object"};
 printLabel(myObj);
 ```
 
+还有一点值得提的是，类型检查器不会去检查属性的顺序，只要相应的属性存在并且类型也是对的就可以。
+
 ### 三、可选属性
 
 接口里的属性不全都是必需的。可选属性在应用“option bags”模式时很常用，即给函数传入的参数对象中只有部分属性赋值了。
