--- a/web/typescript/01.基础学习/08.高级类型.md
+++ b/web/typescript/01.基础学习/08.高级类型.md
@@ -38,7 +38,7 @@ jim.log();
 
 ### 二、联合类型（Union Types）
 
-联合类型与交叉类型很有关联，但是使用上缺完全不同。
+联合类型与交叉类型很有关联，但是使用上却完全不同。
 
 ```TS
 /**
@@ -103,7 +103,7 @@ pet.layEggs(); // okay
 pet.swim();    // errors
 ```
 
-### 三、类型保护与区别类型（Type Guards and Differentiating Types）
+### 三、类型保护与区分类型（Type Guards and Differentiating Types）
 
 联合类型适用于那些值可以为不同类型的情况。但当我们想确切地了解是否为Fish时怎么办？js里常用来区分2个可能值的方法是检查成员是否存在。如果之前提及的，我们只能访问联合类型中共同拥有的成员。
 
@@ -350,5 +350,137 @@ function rollDie(): 1 | 2 | 3 | 4 | 5 | 6 {
 在我们谈及”单例类型“的时候，多数是指枚举成员类型和数字、字符串字面量类型，尽管大多数用户会互换使用”单例类型“和”字面量类型“
 
 ### 九、可辨识联合（Discriminated Unions）
+
+```TS
+interface Square {
+  kind: "square";
+  size: number;
+}
+interface Rectangle {
+  kind: "rectangle";
+  width: number;
+  height: number;
+}
+interface Circle {
+  kind: "circle";
+  radius: number;
+}
+
+type Shape = Square | Rectangle | Circle;
+function area(s: Shape) {
+  switch (s.kind) {
+    case "square": return s.size * s.size;
+    case "rectangle": return s.height * s.width;
+    case "circle": return Math.PI * s.radius ** 2;
+  }
+}
+```
+
+### 十、索引类型（Index types）
+
+使用索引类型，编译器能够检查使用了动态属性名的代码。例如，一个常见的javascript模式是从对象中选取属性的子集。
+
+```TS
+function pluck(o, names) {
+  return names.map(n => o[n]);
+}
+// 下面是如何在typescript中使用此函数，通过索引类型查询和索引访问操作符
+function pluck<T, K extends keyof T>(o: T, names: K[]): T[K][] {
+  return names.map(n => o[n]);
+}
+
+interface Person {
+  name: string;
+  age: number;
+}
+let person: Person = {
+  name: 'Jarid',
+  age: 35,
+};
+
+let strings: string[] = pluck(person, ['name']); // ok, string[]
+```
+
+**keyof**
+编译器会检查name是否真的是Person的一个属性。本例还引入了几个新的类型操作符。首先是 keyof，索引类型查询操作符。对于任何类型T，keyof T的结果为T上已知的公共属性名的联合。
+
+```TS
+let personProps: keyof Person; // 'name' | 'age'
+```
+
+**T[K]**
+
+索引访问操作符。在这里，类型语法反映了表达式语法。这意味着person['name']具有Person['name']的类型--在我们的例子里则为string类型。
+
+```TS
+function getProperty<T, K extends keyof T>(o: T, name: K): T[K] {
+  return o[name]; // o[name] is of type T[K]
+}
+
+let name: string = getProperty(person, 'name');
+let age: number = getProperty(person, 'age');
+let unknown = getProperty(person, 'unknown'); // error, 'unknown' is not in 'name' | 'age'
+```
+
+**索引类型和字符串索引签名**
+
+keyof和T[K]与字符串索引签名进行交互。如果你有一个带有字符串索引签名的类型。那么keyof T会是string。并且T[stirng]为索引签名的类型
+
+### 十一、映射类型
+
+一个常见的任务是将一个已知的类型每个属性都变为可选的：
+
+```TS
+interface PersonPartial {
+  name?: string;
+  age?: number;
+}
+// 或者我们想要一个只读版本：
+interface PersonReadonly {
+  readonly name: string;
+  readonly age: number;
+}
+```
+
+这在javascript中经常出现，Typescript提供了从旧类型中创建新类型的一种方式--映射类型。在映射类型中，新类型以相同的形式去转换旧类型里的每个属性。例如，你可以令每个属性成为readonly类型或可选的 。
+
+```TS
+type Readonly<T> = {
+  readonly [P in keyof T]: T[P];
+}
+type Partial<T> = {
+  [P in keyof T]?: T[P];
+}
+// 使用
+type PersonPartial = Partial<Person>;
+type ReadonlyPerson = Readonly<Person>;
+```
+
+下面来看看最简单的映射类型和他的组成部分：
+
+```TS
+type Keys = 'option1' | 'option2';
+type Flags = { [K in Keys]: boolean };
+// 这个映射类型等同于：
+type Flags = {
+  option1: boolean;
+  option2: boolean;
+}
+```
+
+它的语法与索引签名的语法类型，内部使用了for...in。具有三个部分：
+1. 类型变量K，它会依次绑定到每个属性。
+2. 字符串字面量联合的keys，它包含了要迭代的属性名的集合。
+3. 属性的结果类型。
+
+在真正的应用里，可能不同于上面的Readonly或Partial。他们会基于一些已存在的类型，且按照一定的方式转换字段。这就是keyof和索引访问类型要做的事情：
+
+```TS
+type NullablePerson = { [P in keyof Person]: Person[P] | null }
+type PartialPerson = { [P in keyof Person]?: Person[P] }
+// 但它更有用的地方是可以有一些通用版本。
+type Nullable<T> = { [P in keyof T]: T[P] | null }
+type Partial<T> = { [P in keyof T]?: T[P] }
+```
 
 
