--- a/web/typescript/01.基础学习/03.类.md
+++ b/web/typescript/01.基础学习/03.类.md
@@ -202,7 +202,8 @@ let dad = new Octopus("Man with the 8 strong legs");
 dad.name = "Man with the 3-piece suit"; // 错误! name 是只读的.
 ```
 
-参数属性可以方便地让我们在一个地方定义并初始化一个成员。下面的例子是对之前Octopus类的修改版，使用了参数属性，把声明和赋值合并至一处。
+**参数属性**
+可以方便地让我们在一个地方定义并初始化一个成员。下面的例子是对之前Octopus类的修改版，使用了参数属性，把声明和赋值合并至一处。
 ```TS
 class Octopus {
   readonly numberOfLegs: number = 8;
