--- a/web/typescript/01.基础学习/05.泛型.md
+++ b/web/typescript/01.基础学习/05.泛型.md
@@ -91,6 +91,15 @@ function identity<T>(arg: T): T {
 let myIdentity: <U>(arg: U) => U = identity;
 ```
 
+我们还可以使用带有调用签名的对象字面量来定义泛型函数：
+```TS
+function identity<T>(arg: T): T {
+  return arg;
+}
+
+let myIdentity: {<T>(arg: T): T} = identity;
+```
+
 泛型接口：
 ```TS
 interface GenericIdentityFn {
