--- a/web/javascript/03.基础学习/基础.md
+++ b/web/javascript/03.基础学习/基础.md
@@ -4,7 +4,7 @@
 
 ### 一、js 的数据类型
 
-基本数据类型（原始类型）：String, Number, Boolean, null, undefined, symbol
+基本数据类型（原始类型）：String, Number, Boolean, null, undefined, symbol, BigInt
 
 引用类型：Object (Object、Data、function、Array)
 
@@ -256,4 +256,69 @@ const templateName = 'bye';
 const { [templateName]: template } = templates;
 
 console.log(template); // Good bye
+```
+
+### 十五、零宽字符
+
+#### 1.定义
+
+也叫做隐藏字符，不参与显示，为功能性字符。
+
+> 常见的零宽字符：
+U+200B：零宽度空格符 用于较长单词的换行分隔。
+U+FEFF：零宽度非断空格符 用于阻止特定位置的换行分隔。
+U+200D：零宽度连字符 用于阿拉伯文与印度语系等文字中，使不会发生连字的字符间产生连字效果
+U+200C：零宽度断字符 用于阿拉伯文、德文、印度语系等文字中，阻止会发生连字的字符间的连字效果。
+U+200E：左至右符 用于在混合文字方向的多种语言文本中，规定排版文字书写方向为左至右
+U+200F：右至左符 用于在混合文字方向的多种语言文本中，规定排版文字书写方向为右至左
+
+```JS
+var s = "\u202d176xxxx1115\u202c";
+console.log(s.length); // 13
+```
+
+#### 2.使用
+
+文字水印 隐藏信息的传递
+
+#### 3.过滤
+
+```JS
+str.replace(/[\u200b-\u200f\uFEFF\u202a-\u202e]/g, "");
+```
+
+#### 4.加密、解密
+```JS
+const zeroWidthEncrypt = (hiddenStr = '') => {
+  let encrypted = '';
+  for (let i = 0; i < hiddenStr.length; i++) {
+    const charCode = hiddenStr.charCodeAt(i);
+    const binary = charCode.toString(2).padStart(16, '0');
+    for (let j = 0; j < binary.length; j += 2) {
+      const zeroWidthChar = binary.substr(j, 2).replace(/./g, (m) => (m == '0' ? '\u200b' : '\u200c'));
+      encrypted += zeroWidthChar;
+    }
+  }
+  return encrypted;
+};
+
+const zeroWidthDecrypt = (resultStr = '') => {
+  let decrypted = '';
+  let binaryStr = '';
+  for (const char of resultStr) {
+    if (char === '\u200b' || char === '\u200c') {
+      binaryStr += char === '\u200b' ? '0' : '1';
+      if (binaryStr.length === 16) {
+        decrypted += String.fromCharCode(parseInt(binaryStr, 2));
+        binaryStr = '';
+      }
+    } else {
+      decrypted += char;
+    }
+  }
+  return decrypted;
+};
+
+var s = zeroWidthEncrypt('ABC');
+console.log(zeroWidthDecrypt(s)); // ABC
 ```
