--- a/web/typescript/01.基础学习/01.基础类型.md
+++ b/web/typescript/01.基础学习/01.基础类型.md
@@ -185,7 +185,35 @@ let list: any[] = [1, true, "free"];
 list[1] = 100;
 ```
 
-### 十、Void
+### 九、Unknown
+
+unknown是一种类型安全的any，any类型能够直接赋值给其他类型，unknown不可赋值给其他类型。
+```TS
+let a: any;
+a = 123;
+
+let b: string = 'xxx';
+b = a;
+```
+
+```TS
+let a: unknown;
+a = 123;
+
+let b: string;
+b = a; // Type 'unknown' is not assignable to type 'string'.
+```
+
+可以使用类型断言来规避报错
+```TS
+let e: unknown;
+e = '123';
+
+let s: string;
+s = e as string;
+```
+
+### 十一、Void
 
 void类型与any类型相反，它表示没有任何类型。当一个函数没有返回值时，你通常会见到返回类型是void：
 ```TS
@@ -200,7 +228,7 @@ function warnUser(): void {
 let unusable: void = undefined;
 ```
 
-### 十一、Never
+### 十二、Never
 
 never类型表示的是那些永不存在的值的类型。例如，never类型是那些总是会抛出异常或根本就不会有返回值的函数表达式或箭头函数表达式的返回值类型；变量也可能是never类型，当他们被永不为真的类型保护所约束时。
 
@@ -248,7 +276,7 @@ interface ITypeKeyAny {
 type Itype = ITypeAge | ITypeKeyAny;
 ```
 
-### 十二、Object
+### 十三、Object
 
 object表示非原始类型，也就是除number，string，boolean，symbol，null或undefined之外的类型。
 使用object类型，就可以更好的表示像Object.create这样的API。例如
@@ -262,4 +290,8 @@ create(42); // Error
 create("string"); // Error
 create(false); // Error
 create(undefined); // Error
+```
+```TS
+let stu: { name: 'n' } = { name: 'n' };
+let a: { key: string, [propName: string]: any } = { key: 'a', name: '123' }
 ```
