--- a/web/javascript/03.基础学习/面试.md
+++ b/web/javascript/03.基础学习/面试.md
@@ -3,6 +3,16 @@
 
 ### 一、a==1&&a==2&&a==3 同时成立
 
+== 的运算规则
+1. 特殊
+undefined == null
+NaN != NaN
+2. 类型相同
+比较值
+3. 类型不同
+  - 均为原始值 则转换为数字比较
+  - 端原始值，一端引用值，会将对象转换为原始值(先调用valueOf，若无法转换成原始值，再调用toString)
+
 ```JS
 var a = {
   i: 1,
@@ -46,3 +56,68 @@ console.log(b.x); // { n: 2 }
 ```
 
 尽管赋值是从右向左，但是”.“的优先级比”=“高，所以这里首先执行a.x。
+
+### 四、使 var [a, b] = { a: 1, b: 2 } 成立
+
+```JS
+var [a, b] = { a: 1, b: 2 };
+// VM8087:1 Uncaught TypeError: {(intermediate value)(intermediate value)} is not iterable at <anonymous>:1:14
+```
+
+实现：
+```JS
+Object.prototype[Symbol.iterator] = function () {
+  return Object.values(this)[Symbol.iterator]();
+};
+var [a, b] = { a: 1, b: 2 }; // 成立
+```
+
+### 四、将class转换为普通构造函数
+```JS
+class Animal {
+  constructor(name) {
+    this.name = name;
+  }
+
+  getName() {
+    console.log(this.name);
+  }
+}
+```
+```JS
+'use strict';
+
+function MyAnimal(name) {
+  if (!(this instanceof MyAnimal)) throw new Error(`Class constructor MyAnimal cannot be invoked without 'new'`);
+
+  this.name = name;
+}
+
+Object.defineProperty(MyAnimal.prototype, 'getName', {
+  value: function getName() {
+    if (this instanceof getName) throw new Error(`getName is not a constructor`);
+ 
+    console.log(this.name)
+  },
+  enumerable: false,
+});
+```
+
+### 五、无限递归会栈溢出吗
+
+```JS
+// 不会溢出
+function foo() {
+  setTimeout(foo, 0);
+}
+foo();
+// 会溢出
+function foo() {
+  setTimeout(foo(), 0);
+}
+foo();
+```
+
+### 六、什么是数据响应式
+
+数据变化之后，会自动重新运行依赖该数据的函数。
