--- a/web/typescript/01.基础学习/02.接口.md
+++ b/web/typescript/01.基础学习/02.接口.md
@@ -5,6 +5,8 @@
 
 TypeScript的核心原则之一是对值所具有的结构进行类型检查。它有时被称作“鸭式辨型法”或“结构性子类型化”、在TypeScript里，接口的作用就是为了这些类型命名和为你的代码或第三方代码定义契约。
 
+> type 不能重复定义；interface可以重复定义，最终得到的类型为多个同名接口之和。
+
 ### 二、接口初探
 
 下面通过一个简单示例来观察接口是如何工作的：
