--- a/web/typescript/01.基础学习/08.高级类型.md
+++ b/web/typescript/01.基础学习/08.高级类型.md
@@ -376,7 +376,7 @@ function area(s: Shape) {
 }
 ```
 
-### 十、索引类型（Index types）
+### 十、索引类型（Index types）keyof
 
 使用索引类型，编译器能够检查使用了动态属性名的代码。例如，一个常见的javascript模式是从对象中选取属性的子集。
 
@@ -413,7 +413,7 @@ let personProps: keyof Person; // 'name' | 'age'
 索引访问操作符。在这里，类型语法反映了表达式语法。这意味着person['name']具有Person['name']的类型--在我们的例子里则为string类型。
 
 ```TS
-function getProperty<T, K extends keyof T>(o: T, name: K): T[K] {
+function getProperty<T extends object, K extends keyof T>(o: T, name: K): T[K] {
   return o[name]; // o[name] is of type T[K]
 }
 
